oauth2-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    goldilocks.fairwinds.com/enabled: "true"
