oauth2-proxy/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: harbor
  namespace: harbor
spec:
  hosts:
    - harbor-ton.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: harbor-release-portal
            port:
              number: 80
      timeout: 600s
